--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <li>17:30 受付・パスポート配布・フォト</li>
           <li>17:45 オープニング（注意/遊び方）</li>
           <li>17:50–19:15 フリー周遊 </li>
-          <li>19:15–19:35 コンプリートアトラクション/li>
+          <li>19:15–19:35 コンプリートアトラクション</li>
           <li>19:35 フィナーレ：パレード一斉演出</li>
           <li>19:50 ラストオーダー → 20:00 クローズ</li>
         </ol>
