--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- iPhoneノッチ対応 -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>CHEESE WONDERLAND｜KU-DETA</title>
   <meta name="description" content="とろけて・食べて・遊べるチーズテーマパーク。10/5(日) 17:30–20:00｜1ドリンク付 ¥3,000｜岐阜・KU-DETAで開催。Raclette Slider / Chicago Waterfall / Melty Dip Pot ほかライブ演出多数。男性・お一人様歓迎。"> 
   <meta name="format-detection" content="telephone=no">
@@ -22,19 +23,26 @@
       --bg:#0b0b10; --surface:#121219; --muted:#1b1b26; --brand:#ffd166; --accent:#ef476f; --ok:#06d6a0; --text:#f2f2f7; --sub:#b5b5c2;
       --max:1100px; --radius:20px; --shadow:0 10px 30px rgba(0,0,0,.25);
     }
-    html,body{margin:0;background:linear-gradient(180deg,#0a0a0f, #11111a);color:var(--text);
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, "Hiragino Kaku Gothic ProN", "Noto Sans JP", "Yu Gothic UI", "YuGothic", Meiryo, sans-serif;}
+    html,body{margin:0;background:linear-gradient(180deg,#0a0a0f,#11111a);color:var(--text);
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,"Hiragino Kaku Gothic ProN","Noto Sans JP","Yu Gothic UI","YuGothic",Meiryo,sans-serif;
+      overflow-x:hidden;}
     a{color:inherit;text-decoration:none}
     img{max-width:100%;height:auto;display:block}
-    .container{max-width:var(--max);margin-inline:auto;padding:0 20px}
+    .container{max-width:var(--max);margin-inline:auto;
+      padding-left:max(16px,env(safe-area-inset-left));
+      padding-right:max(16px,env(safe-area-inset-right));}
 
-    header{position:sticky;top:0;z-index:50;background:rgba(10,10,15,.6);backdrop-filter: blur(8px);border-bottom:1px solid rgba(255,255,255,.06)}
-    .nav{display:flex;align-items:center;justify-content:space-between;height:64px}
-    .brand{display:flex;gap:12px;align-items:center;font-weight:700}
+    header{position:sticky;top:0;z-index:50;background:rgba(10,10,15,.6);backdrop-filter: blur(8px);
+      border-bottom:1px solid rgba(255,255,255,.06);
+      padding-left:env(safe-area-inset-left);padding-right:env(safe-area-inset-right);}
+    .nav{display:flex;align-items:center;justify-content:space-between;min-height:64px;gap:10px;flex-wrap:wrap}
+    .brand{display:flex;gap:12px;align-items:center;font-weight:700;white-space:nowrap}
     .brand .dot{width:12px;height:12px;border-radius:50%;background:var(--brand);box-shadow:0 0 20px var(--brand)}
-    .nav a{opacity:.9}
-    .nav .links{display:flex;gap:18px}
-    .btn{display:inline-flex;gap:.5rem;align-items:center;padding:.9rem 1.1rem;border-radius:14px;background:var(--brand);color:#1a1a1a;font-weight:700;box-shadow:var(--shadow);transition:transform .15s ease}
+    .nav .links{display:flex;gap:18px;align-items:center;overflow-x:auto;white-space:nowrap;scrollbar-width:none}
+    .nav .links::-webkit-scrollbar{display:none}
+    .nav a{opacity:.95}
+    .btn{display:inline-flex;gap:.5rem;align-items:center;padding:.9rem 1.1rem;border-radius:14px;background:var(--brand);
+      color:#1a1a1a;font-weight:700;box-shadow:var(--shadow);transition:transform .15s ease}
     .btn:hover{transform:translateY(-2px)}
     .btn.ghost{background:transparent;border:1px solid rgba(255,255,255,.14);color:var(--text)}
 
@@ -48,7 +56,7 @@
     .grid{display:grid;gap:18px}
     @media(min-width:880px){.grid-2{grid-template-columns:1.2fr .8fr}}
 
-    .card{background:linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02));border:1px solid rgba(255,255,255,.08);
+    .card{background:linear-gradient(180deg,rgba(255,255,255,.04),rgba(255,255,255,.02));border:1px solid rgba(255,255,255,.08);
       border-radius:var(--radius);box-shadow:var(--shadow);padding:22px}
     .kpis{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:22px}
     .kpi{background:var(--muted);border:1px solid rgba(255,255,255,.07);border-radius:14px;padding:16px;text-align:center}
@@ -60,7 +68,7 @@
 
     .features{display:grid;gap:18px}
     @media(min-width:720px){.features{grid-template-columns:repeat(3,1fr)}}
-    .feature{padding:18px;border-radius:16px;background:linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,.01));border:1px solid rgba(255,255,255,.08)}
+    .feature{padding:18px;border-radius:16px;background:linear-gradient(180deg,rgba(255,255,255,.03),rgba(255,255,255,.01));border:1px solid rgba(255,255,255,.08)}
     .feature h3{margin:.2rem 0 .4rem}
     .feature p{color:var(--sub);margin:0}
 
@@ -77,7 +85,7 @@
     .attr h3{margin:0 0 4px}
     .attr p{margin:0;color:var(--sub);line-height:1.6}
 
-    /* ギャラリー（上段3枚は比率を統一） */
+    /* ギャラリー（3枚を同じ比率に） */
     .gallery{display:grid;gap:12px;margin-top:14px}
     @media(min-width:900px){.gallery{grid-template-columns:2fr 1fr 1fr}}
     .gallery figure{margin:0;overflow:hidden;border-radius:14px;border:1px solid rgba(255,255,255,.08);background:rgba(255,255,255,.03)}
@@ -86,7 +94,7 @@
 
     .pricing{display:grid;gap:18px}
     @media(min-width:860px){.pricing{grid-template-columns:repeat(3,1fr)}}
-    .plan{padding:22px;border-radius:16px;background:linear-gradient(180deg, rgba(255,255,255,.05), rgba(255,255,255,.02));border:1px solid rgba(255,255,255,.08)}
+    .plan{padding:22px;border-radius:16px;background:linear-gradient(180deg,rgba(255,255,255,.05),rgba(255,255,255,.02));border:1px solid rgba(255,255,255,.08)}
 
     .faq details{background:rgba(255,255,255,.03);border:1px solid rgba(255,255,255,.08);border-radius:12px;padding:16px}
     .faq details+details{margin-top:12px}
@@ -96,14 +104,21 @@
     footer{border-top:1px solid rgba(255,255,255,.08);padding:36px 0;color:var(--sub)}
     .sns{display:flex;gap:12px}
 
-    /* simple animations */
-    .fade{opacity:0;transform:translateY(8px);transition:all .6s ease}
-    .fade.show{opacity:1;transform:none}
-
     /* inputs */
     input,select,textarea{width:100%;padding:12px;border-radius:10px;border:1px solid rgba(255,255,255,.12);
       background:rgba(255,255,255,.04);color:var(--text);outline:none}
     input:focus,select:focus,textarea:focus{box-shadow:0 0 0 2px rgba(255,209,102,.35)}
+    input[type="checkbox"]{width:18px;height:18px}
+
+    /* 日本語の折返し最適化（はみ出し防止） */
+    .hero h1,.hero p.lead{line-break:strict;word-break:keep-all;overflow-wrap:anywhere}
+
+    /* かなり小さい幅では“予約する”優先 */
+    @media (max-width: 480px){
+      .nav .links a:not(.btn){display:none}
+      .hero h1{font-size: clamp(28px, 7vw, 44px);}
+      .hero p.lead{font-size: clamp(14px, 4vw, 18px);}
+    }
   </style>
 </head>
 <body>
@@ -121,6 +136,7 @@
     </div>
   </header>
 
+  <!-- ================= HERO ================= -->
   <section class="hero">
     <div class="container inner grid grid-2">
       <div>
@@ -153,6 +169,7 @@
     </div>
   </section>
 
+  <!-- ================= ABOUT ================= -->
   <section id="about" class="section">
     <div class="container">
       <h2>イベント概要</h2>
@@ -176,6 +193,7 @@
     </div>
   </section>
 
+  <!-- ================= ATTRACTIONS ================= -->
   <section id="attractions" class="section">
     <div class="container">
       <h2>5大アトラクション</h2>
@@ -205,6 +223,7 @@
     </div>
   </section>
 
+  <!-- ================= TICKETS ================= -->
   <section id="tickets" class="section">
     <div class="container">
       <h2>チケット</h2>
@@ -243,6 +262,7 @@
     </div>
   </section>
 
+  <!-- ================= FAQ ================= -->
   <section id="faq" class="section">
     <div class="container">
       <h2>よくあるご質問</h2>
@@ -253,6 +273,7 @@
     </div>
   </section>
 
+  <!-- ================= ACCESS ================= -->
   <section id="access" class="section">
     <div class="container">
       <h2>アクセス</h2>
@@ -278,7 +299,7 @@
     </div>
   </section>
 
-  <!-- 予約フォーム -->
+  <!-- ================= RESERVE FORM ================= -->
   <section id="reserve-form" class="section">
     <div class="container">
       <h2>予約フォーム</h2>
@@ -295,18 +316,17 @@
           <label>電話番号*<br><input type="tel" name="tel" required autocomplete="tel"></label>
           <label>人数*<br><input type="number" name="people" min="1" max="6" required value="2"></label>
 
-          <!-- オプション -->
-          <fieldset style="grid-column:1/-1; border:1px solid rgba(255,255,255,.12); border-radius:12px; padding:12px">
-            <legend class="muted" style="padding:0 6px">オプション（任意）</legend>
-            <label style="display:flex;gap:8px;align-items:center;margin:.4rem 0"><input type="checkbox" name="opt_extra_cheese" value="yes"> 追いチーズ +¥200</label>
-            <label style="display:flex;gap:8px;align-items:center;margin:.2rem 0"><input type="checkbox" name="opt_extra_drink" value="yes"> 追加ドリンク +¥600〜</label>
-          </fieldset>
-
-          <label style="grid-column:1/-1">備考<br><textarea name="note" rows="4" placeholder="お連れさまの人数変更、写真NGなど"></textarea></label>
-          <label style="grid-column:1/-1; display:flex; gap:10px; align-items:flex-start">
-            <input type="checkbox" required style="margin-top:6px">
-            <span class="muted">個人情報の取り扱いに同意します（予約確認の目的でのみ利用します）。</span>
+          <label style="grid-column:1/-1">備考<br>
+            <textarea name="note" rows="4" placeholder="お連れさまの人数変更、写真NGなど"></textarea>
           </label>
+
+          <!-- 個人情報チェック（見やすい枠） -->
+          <div style="grid-column:1/-1;border:1px solid rgba(255,255,255,.2);border-radius:12px;padding:12px;background:rgba(255,255,255,.03)">
+            <label style="display:flex;gap:10px;align-items:flex-start;line-height:1.6">
+              <input type="checkbox" required style="margin-top:4px;flex-shrink:0">
+              <span class="muted">個人情報の取り扱いに同意します。<br>（予約確認の目的でのみ利用します）</span>
+            </label>
+          </div>
         </div>
         <input type="hidden" name="_subject" value="[KU-DETA] CHEESE WONDERLAND 予約">
         <input type="hidden" name="event" value="CHEESE WONDERLAND 2025-10-05">
@@ -321,6 +341,7 @@
     </div>
   </section>
 
+  <!-- ================= FOOTER ================= -->
   <footer>
     <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
       <small>© 2025 KU-DETA</small>
@@ -357,14 +378,14 @@
   </script>
 
   <script>
-    // フェードイン
+    // スクロール時フェードイン（必要なら .fade を付与して使う）
     const onScroll = () => {
       document.querySelectorAll('.fade').forEach(el => {
         const r = el.getBoundingClientRect();
-        if(r.top < window.innerHeight - 80) el.classList.add('show');
+        if (r.top < innerHeight - 80) el.classList.add('show');
       });
     };
-    window.addEventListener('scroll', onScroll); onScroll();
+    addEventListener('scroll', onScroll); onScroll();
 
     // カウントダウン（2025/10/05 17:30 JST）
     const cd = document.getElementById('countdown');
@@ -389,9 +410,9 @@
     document.querySelectorAll('a[href^="#"]').forEach(a=>{
       a.addEventListener('click', e=>{
         const href = a.getAttribute('href');
-        if(href.length>1){
+        if (href.length>1){
           e.preventDefault();
-          document.querySelector(href).scrollIntoView({behavior:'smooth'});
+          document.querySelector(href)?.scrollIntoView({behavior:'smooth'});
         }
       });
     });
