--- a/index.html
+++ b/index.html
@@ -137,7 +137,11 @@
   </header>
 
   <!-- ================= HERO ================= -->
-  <section class="hero">
+ <!-- TOP IMAGE -->
+<section id="top">
+  <img src="img/ogp.jpg" alt="CHEESE WONDERLAND メインビジュアル"
+       style="width:100%; height:auto; display:block;">
+</section>
     <div class="container inner grid grid-2">
       <div>
         <span class="chip">10/5(日) 17:30–20:00｜岐阜 KU-DETA</span>
@@ -167,7 +171,7 @@
         <p class="muted" style="margin-top:8px">ハッシュタグは <b>#CheeseWonderland</b> <b>#KUDETA</b></p>
       </div>
     </div>
-  </section>
+ 
 
   <!-- ================= ABOUT ================= -->
   <section id="about" class="section">
